# PerovKit

./: .gitignore  README.md  pyproject.toml
src/perovkit/: core.py  ligand.py  nc.py  slab.py
src/perovkit/strain/: __init__.py  strain.py
src/perovkit/tilt/: apply_tilt.py
src/perovkit/utils/: geometry.py  rotation.py
src/pync/: __init__.py  core.py  ligand.py  nc.py  slab.py
src/pync/strain/: strain.py
