[project]
name = "perovkit"
version = "0.1.0"
description = "PerovKit: A Python library for robust, automatic construction of ligand-passivated perovskite models"
authors = [
    { name="Seungjun Cha", email="scha@gatech.edu" }
]
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "ase",
    "rdkit",  
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"